--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "clear": "^0.1.0",
     "colors": "^1.3.0",
     "concurrently": "^4.0.0",
+    "dotenv": "^8.2.0",
     "ejs": "^2.6.1",
     "express": "^4.16.4",
     "express-session": "^1.15.6",
