--- a/manifest.yml
+++ b/manifest.yml
@@ -1,6 +1,8 @@
 ---
 applications:
 - name: my-homepage
+  buildpacks:
+    - https://github.com/cloudfoundry/nodejs-buildpack
   routes:
     - route: tobiashoelzer.eu-de.mybluemix.net
   memory: 128M
