--- a/package.json
+++ b/package.json
@@ -4,14 +4,15 @@
   "description": "This is the node.js app for my own Homepage.",
   "private": true,
   "engines": {
-    "node": "^10.0.0"
+    "node": "^16.0.0"
   },
   "config": {
     "entrypoint": "server.js"
   },
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon server.js"
+    "dev": "nodemon server.js",
+    "deploy": "env $(cat .env | grep -v \"#\" | xargs) pm2 deploy ecosystem.config.js production"
   },
   "dependencies": {
     "async": "^2.6.1",
@@ -26,7 +27,6 @@
     "express-session": "^1.15.6",
     "express-validator": "^5.2.0",
     "gridfs-stream": "^1.1.1",
-    "ibm-cloud-env": "^0",
     "material-design-lite": "^1.3.0",
     "mongodb": "^3.1.13",
     "mongoose": "^5.4.17",
@@ -73,5 +73,8 @@
     "sitemap": "^4.1.1",
     "socket.io": "^2.1.1",
     "uniqid": "^5.0.3"
+  },
+  "volta": {
+    "node": "16.18.0"
   }
 }
