--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -35,5 +35,8 @@ jobs:
           echo MONGO_PASS=${{ secrets.MONGO_PASS }} >> .env
           echo MONGO_URL=${{ secrets.MONGO_URL }} >> .env
 
+      - name: List git changes
+        run: git status
+
       - name: Deploy
         run: npm run deploy
