--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,7 +14,7 @@ jobs:
           cache: 'npm'
 
       - name: Install PM2
-        run: npm i pm2
+        run: npm i -g pm2
 
       - name: Install SSH Key
         uses: shimataro/ssh-key-action@v2
