--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,9 +25,6 @@ jobs:
       - name: Adding Known Hosts
         run: ssh-keyscan -H ${{ secrets.SSH_HOST }}  >> ~/.ssh/known_hosts
 
-      - name: Write SSH-Keyfile
-        run: echo "$SSH_PRIVATE_KEY" > ~/.ssh/github_actions_rsa
-
       - name: Create env file
         run: |
           touch .env
@@ -35,8 +32,8 @@ jobs:
           echo MONGO_PASS=${{ secrets.MONGO_PASS }} >> .env
           echo MONGO_URL=${{ secrets.MONGO_URL }} >> .env
 
-      - name: List git changes
-        run: git status
+      - name: List ssh
+        run: ls ~/.ssh
 
       - name: Deploy
         run: npm run deploy
