--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -32,8 +32,8 @@ jobs:
           echo MONGO_PASS=${{ secrets.MONGO_PASS }} >> .env
           echo MONGO_URL=${{ secrets.MONGO_URL }} >> .env
 
-      - name: List ssh
-        run: ls ~/.ssh
+      - name: Get Path
+        run: echo $PATH && echo $(whoami)
 
       - name: Deploy
         run: npm run deploy
