--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,7 +2,7 @@
 name: Deploy
 on:
   push:
-    branches: [ main ]
+    branches: [main]
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
@@ -14,7 +14,7 @@ jobs:
           cache: 'npm'
 
       - name: Install PM2
-        run: npm i -g pm2
+        run: npm i -g pm2 dotenv
 
       - name: Install SSH Key
         uses: shimataro/ssh-key-action@v2
